--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dự Án Báo Tường</title>
     <link rel="stylesheet" href="style.css">
     <style>
         .content p{
@@ -255,7 +255,8 @@
             <a href="https://vietnamnet.vn/nhung-mau-bao-tuong-ngay-nha-giao-viet-nam-20-11-dep-nhat-2340972.html" class="nguon">4</a><br>
             <a href="https://comem.vn/tho-20-11-ngan?srsltid=AfmBOorhe8BRGM_rCTLq0dmjxK1DYisJ92T9yBaaoGeqSHny4kZD_9N5" class="nguon">5</a><br>
             <a href="https://hopamviet.vn/info/composer/152/nguyen-nhat-huy.html" class="nguon">6</a><br>
-            <a href="https://vi.wikipedia.org/wiki/Ph%C6%B0%C6%A1ng_M%E1%BB%B9_Chi" class="nguon">7</a>
+            <a href="https://vi.wikipedia.org/wiki/Ph%C6%B0%C6%A1ng_M%E1%BB%B9_Chi" class="nguon">7</a><br>
+            <a href="https://chatgpt.com/c/67c6de54-15e8-8011-a19a-78c2c0740c3e" class="nguon" 7></a>
         </div>
     </div>
 </body>
